# lsu

./: main.py  pyproject.toml
embedding/: embed.py
lsu/: .env  functions.py  main.py  questions.py
lsu/processed/: scraped.csv
processed/: scraped.csv
