[tool.poetry]
name = "lsu"
version = "0.1.0"
description = ""
authors = ["nheingit <60185486+nheingit@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
pandas = "^2.0.2"
tiktoken = "^0.4.0"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
typing-extensions = "^4.6.3"
langchain = "^0.0.199"
CairoSVG = "^2.7.0"
replicate = "^0.15.4"
openai = "^1.12.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
python-telegram-bot = "^20.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
